# libxkbcommon

./: .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  Android.mk  COPYING  Makefile.am  NEWS  NEWS.md  PACKAGING  README  README.md  RELEASING.md  autogen.sh  azure-pipelines.yml  configure.ac  makeheader.py  makekeys.py  meson.build  meson.options  meson_options.txt  towncrier.toml  xkbcommon-uninstalled.pc.in  xkbcommon-x11.map  xkbcommon.map  xkbcommon.pc.in  xkbregistry.map
bench/: .gitignore  atom.c  bench.c  bench.h  compile-keymap.c  compose-traversal.c  compose.c  custom-parsers.c  key-proc.c  keysym-case-mappings.c  meson.build  rules.c  rulescomp.c  x11.c
doc/: .gitignore  Doxyfile.in  compat.md  compatibility.md  cool-uris.yaml  custom-configuration.md  debugging.md  doxygen-extra.css  faq.md  introduction-to-xkb.md  introspection.md  keymap-format-text-v1.md  keymap-format-text-v1.txt  keymap-text-format-v1-2.md  keymap-text-format-v1-v2.md  license.md  meson.build  message-registry.md  message-registry.md.jinja  message-registry.yaml  packaging-keyboard-layouts.md  quick-guide.md  release-notes.md  rules-format.md  rules-format.txt  user-configuration.md
doc/diagrams/: xkb-configuration.dot  xkb-keymap-components.dot  xkb-types-explanation.dot
fuzz/: .gitignore  fuzz.sh  meson.build
fuzz/compose/: target.c
fuzz/keymap/: compile.c  parser.c  target.c
fuzz/keymap/testcases/: merge-modes-default.xkb
src/: .gitignore  Makefile.am  XKBcommonint.h  XkbCommonInt.h  abi-check.c  abi-check.h  alloc.c  alloc.h  atom-priv.h  atom.c  atom.h  bump.c  bump.h  compat.c  context-priv.c  context.c  context.h  darray.h  enums.c  enums.c.jinja  enums.h  enums.h.jinja  features.c  features.c.jinja  galloc.c  geom.c  keymap-compare.c  keymap-compare.h  keymap-dump.c  keymap-formats.c  keymap-formats.h  keymap-priv.c  keymap-priv.h  keymap.c  keymap.h  keysym-case-mappings.c  keysym-names.h  keysym-utf.c  keysym.c  keysym.h  (+46 more)
src/compose/: cache.c  cache.h  constants.h  dump.c  dump.h  escape.h  parser.c  parser.h  paths.c  paths.h  state.c  table.c  table.h
src/features/: enums.h  enums.h.jinja
src/makekeys/: Makefile.am  makekeys.c
src/x11/: keymap.c  state.c  util.c  x11-priv.h
src/xkbcomp/: .gitignore  Makefile.am  action.c  action.h  alias.c  alias.h  ast-build.c  ast-build.h  ast.h  cache.c  cache.h  compat.c  expr.c  expr.h  file_iterator.c  file_iterator.h  geometry.c  include.c  include.h  indicators.c  indicators.h  keycodes.c  keycodes.h  keymap-dump.c  keymap-file-iterator.c  keymap-file-iterator.h  keymap.c  keytypes.c  keywords.c  keywords.gperf  listing.c  meson.build  misc.c  misc.h  parser-priv.h  parser.c  parser.h  parser.y  parseutils.c  parseutils.h  (+23 more)
test/: .gitignore  Makefile.am  atom.c  basic.xkb  bench-key-proc.c  buffercomp.c  canonicalise.c  canonicalise.sh  common.c  compose-iter.c  compose-iter.h  compose.c  context.c  context.sh  default.xkb  dump.c  dump.data  enums.c  evdev-scancodes.h  extensions-directories.c  external_xkb_compilers.h  features.c  filecomp.c  filecomp.sh  headers-compatibility.cpp  how-to-type.c  interactive-evdev.c  interactive-wayland.c  interactive-x11.c  interactive.c  introspection.c  keymap.c  keyseq.c  keysym-case-mapping.h  keysym-case-mapping.h.jinja  keysym-unicode.c  keysym.c  keysym.h  keysym.h.jinja  lenient-mode.c  (+47 more)
test/data/: .editorconfig  sync.sh
test/data/compat/: basic  caps  iso9995-v1.1  iso9995-v2  leds  ledscroll  level3-v2  merge_modes  merge_modes.jinja  merge_modes_defaults  merge_modes_vmods  misc  recursive  testlatch
test/data/keycodes/: evdev-xkbcommon  high  merge_modes  merge_modes.jinja  recursive
test/data/keymaps/: bidi.xkb  compat-interpret.xkb  default.xkb  digits.xkb  divide-by-zero.xkb  dump.data  empty-compound-statements.xkb  empty-symbol-decl.xkb  escape-sequences.xkb  explicit-actions.xkb  extended-layout-indices-v1.xkb  extended-layout-indices-v2.xkb  group-index-names-1.xkb  group-index-names-2.xkb  group-index-names-3.xkb  group-index-names-4.xkb  high-keycodes-1.xkb  high-keycodes-2.xkb  high-keycodes-3.xkb  high-keycodes-4.xkb  host-no-pretty.xkb  host.xkb  include-banana-implicit-default.xkb  include-capslock-custom.xkb  include-capslock-system.xkb  include-invalid-group-index.xkb  include-level3-explicit-default.xkb  integers-overflow.xkb  integers.xkb  invalid-escape-sequence.xkb  invalid-qualified-symbols-field.xkb  invalid-qualified-type-field.xkb  keycodes-aliases-1.xkb  keycodes-aliases-2.xkb  keycodes-aliases-3.xkb  keycodes-bounds-multiple-1.xkb  keycodes-bounds-multiple-2.xkb  keycodes-bounds-multiple-3.xkb  keycodes-bounds-single-1.xkb  keycodes-bounds-single-2.xkb  (+55 more)
test/data/rules/: all_qualifier  all_qualifier-limit  base  evdev  evdev-extra  evdev-modern  evdev-pure-virtual-mods  extended-wild-cards  groups  inc-no-newline  inc-src-relative-path  invalid-group-index  invalid-group-qualifier  layout-specific-options  loop  loop1  loop2  loop3  loop4  loop5  loop6  merge-mode-replace  modifiers  multiple-groups  partial  partial.post  partial.pre  simple  special_indexes  special_indices  special_indices-limit  utf-16be_with_bom  utf-32be  (+3 more)
tools/: check-messages.c  compile-compose.c  compile-keymap-server.c  compile-keymap.c  export-keysyms.c  how-to-type.c  info.c  interactive-evdev.c  interactive-evdev.c.orig  interactive-wayland.c  interactive-x11.c  interactive.c  introspection-query.py.in  introspection.c  meson.build  messages.c  messages.c.jinja  messages.h  print-compiled-keymap.c  registry-list.c  rmlvo-to-kccgst.c  rmlvo-to-keymap.c  test-tool-option-parsing.py  tools-common.c  tools-common.h  xkb-layout-zsh-completion.zsh  xkb-model-zsh-completion.zsh  xkb-options-zsh-completion.zsh  xkb-variant-zsh-completion.zsh  xkbcli-bash-completion.sh  xkbcli-compile-compose.1  xkbcli-compile-keymap.1  xkbcli-compile-keymap.1.ronn  xkbcli-dump-keymap-wayland.1  xkbcli-dump-keymap-x11.1  xkbcli-how-to-type.1  xkbcli-how-to-type.1.ronn  xkbcli-info.1  xkbcli-interactive-evdev.1  xkbcli-interactive-evdev.1.ronn  (+11 more)
(+331 files in other folders)
